tests/baselines/reference/mappedTypeWithNameClauseAppliedToArrayType.errors.txt
mappedTypeWithNameClauseAppliedToArrayType.ts(6,14): error TS2345: Argument of type 'Mappy<number[]>' is not assignable to parameter of type 'unknown[]'.
  Type 'Mappy<number[]>' is missing the following properties from type 'unknown[]': length, pop, push, concat, and 16 more.


==== mappedTypeWithNameClauseAppliedToArrayType.ts (1 errors) ====
    type Mappy<T extends unknown[]> = { [K in keyof T as K]: T[K] };
    type NotArray = Mappy<number[]>;
    
    declare function doArrayStuff(x: unknown[]): void;
    declare const x: NotArray;
    doArrayStuff(x);
                 ~
!!! error TS2345: Argument of type 'Mappy<number[]>' is not assignable to parameter of type 'unknown[]'.
!!! error TS2345:   Type 'Mappy<number[]>' is missing the following properties from type 'unknown[]': length, pop, push, concat, and 16 more.
    